--- a/templates/Accounts/registration.html
+++ b/templates/Accounts/registration.html
@@ -20,7 +20,7 @@
       <div class="center-align">
         <h3>Your account has been activated</h3>
         <p>
-          <span>  <a  href="{% url 'Accounts:user_login' %}">Click Here</a>to Login
+          <span>  <a  class="btn" href="{% url 'Accounts:user_login' %}">Click Here</a>to Login
           </span>
 
         </p>
