--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,3 +53,68 @@ body {
 
 .login_form {
   margin-top: 7rem !important; }
+
+.margin_top_7 {
+  margin-top: 7rem; }
+
+#id_job_type_name {
+  display: inline-block; }
+
+#id_highest_education {
+  display: inline-block; }
+
+#id_degree_type {
+  display: inline-block; }
+
+#id_degree_name {
+  display: inline-block; }
+
+.basic_form > * {
+  margin-bottom: 5rem; }
+
+.img-responsive {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover; }
+
+.capitalize {
+  text-transform: capitalize; }
+
+.heading {
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #455a64, #455a64);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading:hover {
+    transform: skewY(1deg) skewX(7deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading-secondary {
+  text-transform: capitalize;
+  font-weight: 400;
+  display: inline-block;
+  background-image: linear-gradient(to right, #455a64, #455a64);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .1rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(1deg) skewX(7deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.margin_top_1 {
+  margin-top: 1rem; }
+
+.z_index {
+  z-index: 1000 !important; }
+
+.btn-floating_1 {
+  transform: translateY(-55%); }
+
+.hover:hover {
+  transition: all .2s;
+  transform: scale(1.05); }
