Jobseeker Inputs almost done

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -54,7 +54,7 @@ body {
     //margin-top:4rem;
 }
 .content{
-    min-height:100vh;
+    min-height:50vh;
     overflow:hidden;
     position:relative;
 }
@@ -79,6 +79,9 @@ body {
     display:inline-block;
 }
 #id_degree_name{
+    display:inline-block;
+}
+#id_job_location_city{
     display:inline-block;
 }
 //Basic Form for jobseeker
