Jobseeker inputs about to perfect

--- a/templates/Accounts/registration.html
+++ b/templates/Accounts/registration.html
@@ -33,13 +33,13 @@
             <div class="row">
               <div class="input-field col s8 m4 ">
                    <label for="id_user_type_name_0">
-                        <input class="with-gap" style="display:none" type="radio" name="user_type_name" value="employer" required="" id="id_user_type_name_0">
+                        <input class="with-gap" style="display:none" type="radio" name="user_type_name" value="employer"  id="id_user_type_name_0">
                        <span>I'm An Employer</span>
                    </label>
               </div>
               <div class="input-field col s8 m4 ">
                   <label for="id_user_type_name_1">
-                       <input style="display:none" class="with-gap" type="radio" name="user_type_name" value="jobseeker" required="" id="id_user_type_name_1">
+                       <input style="display:none" class="with-gap" type="radio" name="user_type_name" selected value="jobseeker" id="id_user_type_name_1">
                         <span>I'm Looking for a Job</span>
                   </label>
               </div>
