--- a/templates/Jobseeker/jobseeker_display_profile.html
+++ b/templates/Jobseeker/jobseeker_display_profile.html
@@ -95,6 +95,7 @@
                             <div class="card-content">
                               <span class="card-title">{{experience.job_title}}&nbsp;at &nbsp;{{experience.company_name}}</span>
                               <div>
+                                  <p class="margin_top_1"><b>Job Type:</b>&emsp;{{experience.job_type}}</p><br>
                                   <p class="margin_top_1"><b>Job location City:</b>&emsp;{{experience.job_location_city}}</p><br>
                                   <p class="margin_top_1"><b>Job Description:</b>&emsp;{{experience.job_description}}</p><br>
                                   <p class="margin_top_1"><b>Start Date:</b>&emsp;{{experience.start_date}}</p><br>
