--- a/templates/Jobseeker/jobseeker_display_profile.html
+++ b/templates/Jobseeker/jobseeker_display_profile.html
@@ -126,7 +126,7 @@
                         <div class="hover col s6 m3">
                           <div class="card">
                             <div class="card-content">
-                              <span class="card-title">{{skill_set.skill_set_id.skill_set_name}}&nbsp;&emsp; &nbsp;{{skill_set.skill_level}}&nbsp;/&nbsp;10</span>
+                              <span class="card-title">{{skill_set.skill_set_id.skill_set_name}}&nbsp;<br> Level: &nbsp;{{skill_set.skill_level}}&nbsp;/&nbsp;10</span>
                             </div>
                             <div class="card-action">
                               <a href="{% url 'Jobseeker:skill_set_crud' operation='delete' id=skill_set.id %}" class="waves-effect waves-light btn red lighten-1"><i class="material-icons left">delete</i>Delete</a>
