--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  background-color: #fcfcfc; }
+  background-color: #fafafa; }
 
 .navbar-fixed nav {
   width: 99%; }
