--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
         <li><a href="{% url 'Jobseeker:jobseeker_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge"></span>{% endif %}</a></li>
             {% elif user_type.user_type_name == 'employer' %}
           <li><a href="{% url 'Employer:post_job_crud' operation='new' id=0 %}">Post Job</a></li>
+          <li><a href="{% url 'Employer:employer_view_jobs' %}">My Jobs</a></li>
           <li><a href="{% url 'Employer:employer_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge"></span>{% endif %}</a></li>
             {% endif %}
         <li><a href="{% url 'Accounts:user_logout' %}">Logout</a></li>
@@ -55,6 +56,7 @@
         <li><a href="{% url 'Jobseeker:jobseeker_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge">1</span>{% endif %}</a></li>
             {% elif user_type.user_type_name == 'employer' %}
             <li><a href="{% url 'Employer:post_job_crud' operation='new' id=0 %}">Post Job</a></li>
+            <li><a href="{% url 'Employer:employer_view_jobs' %}">My Jobs</a></li>
           <li><a href="{% url 'Employer:employer_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge"></span>{% endif %}</a></li>
             {% endif %}
         <li><a href="{% url 'Accounts:user_logout' %}">Logout</a></li>
