--- a/static/css/style.css
+++ b/static/css/style.css
@@ -140,3 +140,87 @@ body {
 
 .job_description {
   height: 30vh; }
+
+.employer_view_jobs_background {
+  min-height: 20vh;
+  width: 100%;
+  background-color: #80d8ff;
+  color: white;
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: center;
+  padding: 1rem; }
+
+.employer_view_jobs_container {
+  position: relative;
+  min-height: inherit;
+  transform: translateY(-10vh); }
+  .employer_view_jobs_container_item {
+    border-radius: 5px;
+    min-height: 30vh;
+    background-color: #fdfdfd; }
+    .employer_view_jobs_container_item_title {
+      font-size: 1.2rem;
+      font-weight: 600;
+      padding-top: 1rem;
+      padding-left: 1rem;
+      height: 4vh; }
+    .employer_view_jobs_container_item_company_name {
+      font-size: 1rem;
+      font-weight: 400;
+      height: 4.5vh;
+      padding-left: 1rem;
+      margin-bottom: -0.02rem; }
+    .employer_view_jobs_container_item_skills ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      margin-left: 1rem;
+      flex-wrap: wrap; }
+    .employer_view_jobs_container_item_skills ul > li {
+      margin-right: 0.7rem;
+      border: 1px solid #969696;
+      border-radius: 50%;
+      padding: 0.2rem 0.3rem;
+      font-size: 0.9rem; }
+  .employer_view_jobs_container_pagination {
+    margin-top: 1rem;
+    width: 100%;
+    min-height: 5vh; }
+
+@media (max-width: 500px) {
+  .employer_view_jobs_background {
+    height: 15vh; }
+  .employer_view_jobs_container_item {
+    min-height: 25vh; } }
+
+.pagination li.active {
+  background-color: #80d8ff;
+  color: white; }
+
+.jobseeker_index_searchbar_background {
+  height: 35vh;
+  background-image: linear-gradient(90deg, #38a745 0%, #4cce5b 63%); }
+
+.jobseeker_index_searchbar_form {
+  height: 6vh; }
+  .jobseeker_index_searchbar_form_input {
+    height: inherit; }
+    .jobseeker_index_searchbar_form_input:focus {
+      outline: none; }
+    .jobseeker_index_searchbar_form_input::placeholder {
+      color: grey; }
+  .jobseeker_index_searchbar_form_button {
+    height: inherit;
+    font-family: lato;
+    text-transform: capitalize;
+    font-size: 1.3rem; }
+
+@media (max-width: 800px) {
+  .jobseeker_index_searchbar_background {
+    height: 30vh;
+    background-image: linear-gradient(90deg, #38a745 0%, #4cce5b 63%); }
+  .jobseeker_index_searchbar_form {
+    height: 4vh; }
+    .jobseeker_index_searchbar_form_input {
+      height: inherit; } }
