--- a/templates/Employer/employer_view_job.html
+++ b/templates/Employer/employer_view_job.html
@@ -5,8 +5,6 @@
 {% block content %}
 <div class="row employer_view_jobs_background">My Jobs</div>
 <div class="container employer_view_jobs_container">
-
-    {% for job_post in final_list %}
         <div class="row">
             <div class="col s12 m8 offset-m2 l8 offset-l1 employer_view_jobs_container_item z-depth-1 hoverable">
                     <div class="row employer_view_jobs_container_item_title flow-text">{{job_post.0.job_title}}</div>
@@ -39,19 +37,17 @@
                     {% else %}
                       <div class="col s10 m10 l10"><i class="material-icons tiny">hourglass_full</i>&nbsp;Internship</div>
                     {% endif %}
-
-                    {% if job_post.1 %}
                          <div class="divider col s6 offset-s2 m8 offset-m1 l10 green margin_top_1"></div>
-                    {% endif %}
-                </div>
-                {% if job_post.1 %}
 
-                <div class="row employer_view_jobs_container_item_skills">
-                   <ul> {% for skill in job_post.1 %} <li>{{skill}}</li> {% endfor %}</ul>
                 </div>
-                {% endif %}
+<!--                {% if job_post.1 %}-->
+
+<!--                <div class="row employer_view_jobs_container_item_skills">-->
+<!--                   <ul> {% for skill in job_post.1 %} <li>{{skill}}</li> {% endfor %}</ul>-->
+<!--                </div>-->
+<!--                {% endif %}-->
                 <div class="row employer_view_jobs_container_item_action">
-                    <div class="col s6 m3 l3 tooltipped" data-position="top" data-tooltip="View more information"><a href="{% url 'Employer:employer_view_job' id=job_post.0.id %}" class="btn btn-small">View Job</a></div>
+
                     {% if job_post.0.is_active %}
 <!--                        <div class="col s10 m3 l2" style="transform:translateY(30%);margin-bottom:0.7rem;">Status&nbsp;:&nbsp;<span class="green-text">active</span></div>-->
                          <div class="col s6 m3 l3 " style="margin-bottom:1rem;"><a href="{% url 'Employer:toggle_job_post_activity' id=job_post.0.id %}" class="btn btn-small tooltipped" data-position="top" data-tooltip="you will stop receiving applications">Deactivate Post</a></div>
@@ -60,39 +56,55 @@
 <!--                    <div class="col s10 m3 l2">Status&nbsp;:&nbsp;<span class="cyan-text">inactive</span></div>-->
                     {% endif %}
 
-                     <div class="col s3 m2 offset-m1 l2" style="margin-bottom:1rem;"><a href="{% url 'Employer:post_job_crud' operation='edit' id=job_post.0.id %}" class="btn btn-floating btn-small tooltipped" data-position="top" data-tooltip="edit post"><i class="material-icons tiny cyan">edit</i></a></div>
+                     <div class="col s3 m2 offset-m1 l2"><a href="{% url 'Employer:post_job_crud' operation='edit' id=job_post.0.id %}" class="btn btn-floating btn-small tooltipped" data-position="top" data-tooltip="edit post"><i class="material-icons tiny cyan">edit</i></a></div>
                      <div class="col s3 m2 l2"><a href="{% url 'Employer:post_job_crud' operation='delete' id=job_post.0.id %}" class="btn btn-floating btn-small tooltipped" data-position="top" data-tooltip="delete post"><i class="material-icons tiny pink lighten-1">delete</i></a></div>
-                    <div class="col s12 m12 l12 " ><a href="{% url 'Employer:job_post_view_applications' id=job_post.0.id %}" class="btn btn-small tooltipped" data-position="top" data-tooltip="View Applied Candidates">View Applications</a></div>
 
                 </div>
             </div>
         </div>
-    {% endfor %}
 
-        {% if paginator.num_pages > 1 %}
 
-        <div class="row employer_view_jobs_container_pagination">
 
-          <ul class="pagination col s8 offset-s2 m6 offset-m3 l6 offset-l3">
-              {% if final_list.has_previous %}
-                <li class="disabled"><a href="?page=1"><i class="material-icons" style="cursor:pointer;">first_page</i></a></li>
-                <li class="disabled"><a href="?page={{final_list.previous_page_number}}"><i class="material-icons" style="cursor:pointer;">chevron_left</i></a></li>
-              {% endif %}
-              {% for num in final_list.paginator.page_range %}
-                {% if final_list.number == num %}
-                        <li class="active"><a href="?page={{num}}">{{num}}</a></li>
-                {% elif num > final_list.number|add:'-3' and num < final_list.number|add:'3' %}
-                            <li class="waves-effect"><a href="?page={{num}}">{{num}}</a></li>
-                {% endif %}
-              {% endfor %}
-
-              {% if final_list.has_next %}
-              <li class="disabled "><a href="?page={{final_list.next_page_number}}"><i class="material-icons" style="cursor:pointer;">chevron_right</i></a></li>
-                <li class="disabled"><a href="?page={{final_list.paginator.num_pages}}"><i class="material-icons" style="cursor:pointer;">last_page</i></a></li>
-              {% endif %}
-
-          </ul>
+    <div class="row">
+            <div class="col s12 m8 offset-m2 l8 offset-l1 employer_view_jobs_container_item z-depth-1 hoverable">
+                <div class="row employer_view_jobs_container_item_title flow-text">Job Description:</div>
+                <div class="row" style="margin-left:1rem;">
+                    <p>
+                        <ul>{% for line in desc_list %}{% if line|length > 6 %}<li style="list-style-type:square;">{{line}}</li>{% endif %}{% endfor %}</ul>
+                    </p>
+                </div>
             </div>
-            {% endif %}
+    </div>
+
+    <div class="row">
+            <div class="col s12 m8 offset-m2 l8 offset-l1 employer_view_jobs_container_item z-depth-1 hoverable">
+                <div class="row employer_view_jobs_container_item_title flow-text" style="margin-bottom:1.5rem;">Key Skills:&emsp;
+                   <a href="{% url 'Employer:job_post_update_skill_set' operation='new' id=job_post.0.id name='none' %}" class="btn btn-floating btn-small tooltipped" data-position="top" data-tooltip="add new skill"><i class="material-icons tiny cyan">add</i></a>
+                </div>
+                <div class="row employer_view_jobs_container_item_skills" style="margin-left:1rem;">
+                     {% if job_post.1 %}
+                    <ul> {% for skill in job_post.1 %} <li style="padding:1rem;">{{skill}}&emsp;<a href="{% url 'Employer:job_post_update_skill_set' operation='delete' id=job_post.0.id name=skill %}" class="btn btn-floating btn-small tooltipped" data-position="top" data-tooltip="delete this skill"><i class="material-icons tiny pink lighten-1">delete</i></a></li> {% endfor %}</ul>
+                    {% else %}
+                    <p>You have not added any skills</p>
+                    {% endif %}
+                </div>
+            </div>
+    </div>
+
+        <div class="row">
+            <div class="col s12 m8 offset-m2 l8 offset-l1 employer_view_jobs_container_item z-depth-1 hoverable">
+                <div class="row employer_view_jobs_container_item_title flow-text">About Company:</div>
+                <div class="row" style="margin-left:1rem;">
+                    <p>
+                     {% if job_post.0.is_company_name_hidden or job_post.0.posted_by_id.company.company_description == 'none' %}
+                        Confidential
+                        {% else %}
+                            {{job_post.0.posted_by_id.company.company_description}}
+                        {% endif %}
+                    </p>
+                </div>
+            </div>
+    </div>
+
 </div>
 {% endblock %}
